src/test/ui/fmt/ifmt-unimpl.stderr
error[E0277]: the trait bound `str: UpperHex` is not satisfied
  --> $DIR/ifmt-unimpl.rs:2:21
   |
LL |     format!("{:X}", "3");
   |                     ^^^ the trait `UpperHex` is not implemented for `str`
   | 
  ::: $SRC_DIR/alloc/src/macros.rs:LL:COL
   |
LL |         let res = $crate::fmt::format($crate::__export::format_args!($($arg)*));
   |                                       ---------------------------------------- in this macro invocation
   |
   = note: required because of the requirements on the impl of `UpperHex` for `&str`
   = note: required by `std::fmt::UpperHex::fmt`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
